form adds data to database

--- a/index.html
+++ b/index.html
@@ -4,37 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Travel Destinations</title>
   </head>
   <body>
-    <form action="post">
-      <label for="name">
-        Name:
-        <input type="text" id="name" placeholder="Destination name" required />
-      </label>
-      <label for="location">
-        Location:
-        <input type="text" id="location" placeholder="Location" required />
-      </label>
-      <label for="startDate">
-        Start Date:
-        <input type="date" id="startDate" placeholder="Start date" required />
-      </label>
-      <label for="endDate">
-        End Date:
-        <input type="date" id="endDate" placeholder="End date" required />
-      </label>
-      <label for="description">
-        Description:
-        <input type="textarea" id="description" placeholder="Description of the place" required />
-      </label>
-      <label for="img">
-        Image:
-        <input type="file" id="img" placeholder="Upload your image" required />
-      </label>
-      <input type="submit" name="submit" id="submit" value="Create" />
-    </form>
+    <h1>Here will be the list of all the travel destinations</h1>
   </body>
-  <script src="app.js"></script>
 </html>
