--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
     <title>Travel Destinations</title>
   </head>
   <body>
-    <form action="/create" method="POST" id="createForm">
+    <form id="createForm">
       <label for="name">
         Name:
         <input name="name" type="text" id="name" placeholder="Destination name" required />
@@ -36,6 +36,6 @@
       <input type="submit" name="submit" id="submit" value="Create" />
     </form>
   </body>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
   <script src="/public/javascript/create-script.js"></script>
 </html>
