--- a/update.html
+++ b/update.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./public/styling/style.css" />
-    <title>Travel Destinations</title>
+    <title>Update</title>
   </head>
   <body>
-    <form id="createForm">
+    <form id="updateForm">
       <label for="name">
         Name:
         <input name="name" type="text" id="name" placeholder="Destination name" required />
@@ -35,7 +34,6 @@
       </label>
       <input type="submit" name="submit" id="submit" value="Create" />
     </form>
+    <script src="./public/javascript/update-script.js"></script>
   </body>
-  <!-- <script src="app.js"></script> -->
-  <script src="/public/javascript/create-script.js"></script>
 </html>
